--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,3 +25,6 @@ repository = "https://github.com/seanghay/pycrfpp"
 [tool.cibuildwheel]
 # Setuptools bug causes collision between pypy and cpython artifacts
 before-build = "rm -rf {project}/build"
+
+[tool.cibuildwheel.linux]
+archs = ["auto64"]
